--- a/0049-match-arm-attributes.html
+++ b/0049-match-arm-attributes.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html" class="active">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="0198-slice-notation.html">0198-slice-notation</a></li><li class="chapter-item expanded "><a href="1548-global-asm.html">1548-global-asm</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="2843-llvm-asm.html">2843-llvm-asm</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html" class="active">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="0198-slice-notation.html">0198-slice-notation</a></li><li class="chapter-item expanded "><a href="1548-global-asm.html">1548-global-asm</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="2843-llvm-asm.html">2843-llvm-asm</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li><li class="chapter-item expanded "><a href="3151-scoped-threads.html">3151-scoped-threads</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -155,8 +155,7 @@
 <h1 id="動機"><a class="header" href="#動機">動機</a></h1>
 <p>有時希望使用屬性來注釋配對語句的分支，例如條件編譯 <code>#[cfg]</code> 或是分支權重（後者為最重要的用途）。</p>
 <p>對於條件編譯，暫時得解決辦法是使用 <code>#[cfg]</code> 來重複宣告相同函式來處理不同的案例。一個案例研究是 <a href="https://github.com/sfackler/rust-openssl">sfackler 的 bindings to OpenSSL</a>，在多數的發行版本中移除了 SSLv2 支持，因此 Rust bindings 部分需要被條件禁用。支援各種不同 SSL 版本最顯而易見的方法是使用枚舉。</p>
-<pre><pre class="playground"><code class="language-rust">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>pub enum SslMethod {
     #[cfg(sslv2)]
@@ -172,8 +171,7 @@
 <span class="boring">}
 </span></code></pre></pre>
 <p>然而，所有的 <code>match</code> 只能在 <code>cfg</code> 啟用時使用 <code>Sslv2</code>，例如下面內容是無效的：</p>
-<pre><pre class="playground"><code class="language-rust">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>fn name(method: SslMethod) -&gt; &amp;'static str {
     match method {
@@ -187,8 +185,7 @@
 <p>一個有效的方法則必須有兩個定義：<code>#[cfg(sslv2)] fn name(...)</code> 和 <code>#[cfg(not(sslv2)] fn name(...)</code>
 。前者有 <code>Sslv2</code> 的分支，後者沒有。顯然，對於枚舉中每個額外的 <code>cfg</code> 變體，這都會以指數型的方式爆炸。</p>
 <p>分支權重將允許仔細的微優化器（micro-optimiser）通知編譯器，例如，鮮少採取某個配對分支：</p>
-<pre><pre class="playground"><code class="language-rust">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>match foo {
     Common =&gt; {}
@@ -199,8 +196,7 @@
 </span></code></pre></pre>
 <h1 id="詳細設計"><a class="header" href="#詳細設計">詳細設計</a></h1>
 <p>一般的屬性語法，應用於整個配對分支。</p>
-<pre><pre class="playground"><code class="language-rust">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>match x {
     #[attr]
